[tool.poetry]
name = "django-shield"
version = "0.0.1"
description = "Per field and per object authorization for Django admin."
authors = ["Jan Bednařík <jan.bednarik@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JanBednarik/django-shield"
repository = "https://github.com/JanBednarik/django-shield"
keywords = ["django", "admin", "auth", "authorization"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "shield" },
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
